# ctf-lib

./: .clang-format  .gitignore  CMakeLists.txt  standard.hpp  types.hpp
crypt/: ROT.hpp  base64.hpp
playground/: main.cpp
